invite member sen email

--- a/app/assets/stylesheets/application/share.scss
+++ b/app/assets/stylesheets/application/share.scss
@@ -205,8 +205,10 @@
 
 		//modal中列表
 		.modal-list {
+			padding-left: 10px;
+			padding-right: 10px;
 			.row {
-				margin: 5px 10px;
+				margin: 5px 0px;
 			}
 		}
 	}
