--- a/app/views/training_platform/user_projects/_form.html.erb
+++ b/app/views/training_platform/user_projects/_form.html.erb
@@ -17,8 +17,8 @@
 <% end %>
 
 <hr class="my-line">
-
 <div class="modal-list">
+  <h4>成员列表</h4>
   <% (1..10).each do |i| %>
     <div class="row">
       <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 no-padding">
