--- a/app/assets/stylesheets/application/share.scss
+++ b/app/assets/stylesheets/application/share.scss
@@ -211,6 +211,7 @@
 				}
 			}
 		}
+	}
 
 		//modal中列表
 		.modal-list {
@@ -220,7 +221,7 @@
 		}
 	}
 }
-
+}
 //traing_platform_modal2
 .my-nav1{
 	border-radius: 10px;
