--- a/app/assets/stylesheets/training_platform/announces.scss
+++ b/app/assets/stylesheets/training_platform/announces.scss
@@ -14,20 +14,18 @@
 			line-height: 40px;
 		}
 	}
+	.anno-plus{
+		color: #19B29F;
+		font-size: 16px;
+		padding: 2px 1px 2px 3px;
+		border-radius: 12px;
+		border: 2px solid #19B29F;
+	}
 	.anno-add > a{
 		color: #19B29F;
 		font-size: 16px;
-		.anno-plus{
-			font-size: 16px;
-			padding: 2px 1px 2px 3px;
-			border-radius: 12px;
-			border: 2px solid #19B29F;
-		}
-		.anno_plus_word{
-
-		}
 		&:hover{
-			color: darken(#19B29F, 0.8);
+			color: #00CBD2;
 			text-decoration: none;
 		}
 	}
