create UserAnnounces model and ProjectAnnounces model

--- a/app/views/training_platform/announces/index.html.erb
+++ b/app/views/training_platform/announces/index.html.erb
@@ -16,9 +16,10 @@
 					<div class="row">
 						<!-- PAGE CONTENT BEGINS -->
 						<div class="col-xs-6 ace_content_left_title">
-							<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-								<span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span><span class="ace_plus_word">添加项目</span>
-							</a>
+							<%= link_to(new_training_platform_project_announce_path, remote: true, format: :js) do %>
+								<span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span>
+								<span class="ace_plus_word">添加公告</span>
+							<% end %>
 						</div>
 						<!-- begin right-title -->
 						<div class="col-xs-6 ace_content_right_title">
@@ -42,26 +43,18 @@
 						<!-- end right-title -->
 						<div class="col-xs-6 ace_content_page_left">
 							<div class="my-task">
-								<h3 class="clearfix">
-									公告信息
-									<span class="pull-right anno-add">
-										<span class="glyphicon glyphicon-plus anno-plus" aria-hidden="true"></span>
-										<%= link_to(new_training_platform_project_announce_path, remote: true, format: :js) do %>
-											<span class="anno_plus_word">添加项目</span>
-										<% end %>
-									</span>
-								</h3>
+								<h3>公告信息</h3>
 								<hr class="my-line">
 							</div>
 							<% @announces.each do |announce| %>
-							<ul class="nav nav-pills nav-stacked anno-ul">
-								<li>
-									<a class="clearfix" href="#">
-										<span class="col-xs-9 text-left"><%= announce.description %></span>
-										<span class="col-xs-3 text-right"><%= announce.created_at %></span>
-									</a>
-								</li>
-							</ul>
+								<ul class="nav nav-pills nav-stacked anno-ul">
+									<li>
+										<a class="clearfix" href="#">
+											<span class="col-xs-9 text-left"><%= announce.description %></span>
+											<span class="col-xs-3 text-right"><%= announce.created_at %></span>
+										</a>
+									</li>
+								</ul>
 							<% end %>
 						</div>
 
