--- a/app/views/training_platform/task_categories/show.html.erb
+++ b/app/views/training_platform/task_categories/show.html.erb
@@ -20,7 +20,7 @@
                   waits: @task_category.tasks.waits,
                   dos: @task_category.tasks.dos,
                   completes: @task_category.tasks.completes,
-                  acceprances: @task_category.tasks.acceprances,
+                  acceprances: @task_category.tasks.acceprances
                 }%>
 
             <div class="col-xs-6 ace_content_page_right">
@@ -81,7 +81,7 @@
                   </div>
                 </div>
               </div>
-                                                        <div class="col-xs-12">
+            <div class="col-xs-12">
               <div class="col-xs-4 a-col">
                 <h4>业务需求讨论</h4>
               </div>
@@ -97,7 +97,7 @@
                   <li><a href="#">link</a></li>
                 </ul>
               </div>
-                                                        </div>
+            </div>
               <div class="col-xs-12 task_t">
                 <form class="form-horizontal">
                   <div class="form-group">
@@ -123,12 +123,12 @@
                   <li><a href="#">link</a></li>
                 </ul>
               </div>
-                                                        <div class="col-xs-2">
-                                                          <button type="submit" class="btn btn-default">确认提交</button>
-                                                        </div>
-                                                        </div>
-                                                        <h5>1、这里是任务的描述这里是任务的描述这里是任务的描述</h5>
-                                                        <h5>1、这里是任务的描述这里是任务的描述这里是任务的描述</h5>
+              <div class="col-xs-2">
+                <button type="submit" class="btn btn-default">确认提交</button>
+              </div>
+              </div>
+              <h5>1、这里是任务的描述这里是任务的描述这里是任务的描述</h5>
+              <h5>1、这里是任务的描述这里是任务的描述这里是任务的描述</h5>
               <div class="col-xs-12 my-task">
                 <h3>任务动态</h3>
                 <hr class="my-line">
