--- a/app/views/training_platform/user_projects/_form.html.erb
+++ b/app/views/training_platform/user_projects/_form.html.erb
@@ -1,4 +1,4 @@
-<h3 class="text-center title"><span>邀请成员<span></h3>
+ <h3 class="text-center title"><span>邀请成员<span></h3>
 <%= simple_form_for(@user_project, url: training_platform_project_user_projects_path(@user_project, project_id: params[:project_id]),html: {id: "projectFormModal", class: "form-inline"}, remote: true, format: :js) do |f| %>
   <div class="row">
     <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 no-padding">
@@ -36,4 +36,123 @@
       </div>
     </div>
   <% end %>
-</div>
+<!-- </div> --> 
+
+
+<div  class="my-nav1">
+          <ul class="nav nav-tabs ace_modal_ul" role="tablist">
+            <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">任务列表</a></li>
+            <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">项目成员</a></li>
+            <li role="presentation"><a href="#profile1" aria-controls="profile" role="tab" data-toggle="tab">项目信息</a></li>
+          </ul>
+
+        <div class="tab-content main">
+
+            <div role="tabpanel" class="tab-pane active" id="home">
+              <table class="table table-hover ace_modal_tab">
+                  <thead>
+                    <tr>
+                      <th>任务列表名称</th>
+                      <th>所有任务（未完成/已完成）</th>
+                      <th>操作</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                      <td>这是任务列表的名称</td>
+                      <td>14/20</td>
+                      <td>删除 &nbsp| &nbsp 编辑</td>
+                    </tr>
+                    <tr>
+                      <td>这是任务列表的名称</td>
+                      <td>14/20</td>
+                      <td>删除 &nbsp| &nbsp 编辑</td>
+                    </tr>
+                    <tr>
+                      <td>这是任务列表的名称</td>
+                      <td>14/20</td>
+                      <td>删除 &nbsp| &nbsp 编辑</td>
+                    </tr>
+                    </tbody>
+              </table>
+              <button type="button" class="btn btn-info-tp" data-dismiss="modal">添加</button>
+            </div>
+
+            <div role="tabpanel" class="tab-pane" id="profile">
+            <div class="col-xs-8 ace_modal_tab1">
+               <input type="text" placeholder="请输入关键字" class="ace_modal_form" id="ace_modal_form" autocomplete="off" />
+            </div>
+            <div class="col-xs-4">
+                <button type="submit" class="btn btn-default">Send invitation</button>
+            </div>
+            <div class="col-xs-8">
+                  <div class="ace_modal_media">
+                    <%= image_tag current_user.show_image , class: "img-rounded media-object img-circle pull-left" %>
+                    
+                    <span class="pull-left">
+                    <h4 class="media-heading">123456</h4>
+                    邀请于2015-07-28</span>
+                </div>
+            </div>
+            <div class="col-xs-4">
+                  <button type="button" class="btn btn-info-tp1" data-dismiss="modal">创建者...</button>
+            </div>
+            <div class="col-xs-12">
+            <hr>
+            <h3>成员列表</h3>
+            </div>
+                <table class="table table-striped">
+                <tbody class="ace_modal_tbd">
+                 <% 4.times do %>
+                 <tr>
+                 <td>
+                  <div class="ace_modal_media">
+                    <%= image_tag current_user.show_image , class: "img-rounded media-object img-circle pull-left" %>
+                    
+                    <span class="pull-left">
+                    <h4 class="media-heading">123456</h4>
+                    邀请于2015-07-28</span>
+                </div>
+                </td>
+                <td>
+                <div class="dropdown">
+                  <button class="my-btn my-blue btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    管理员
+                    <span class="caret my-caret"></span>
+                  </button>
+                  <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+                    <li><a href="#">参与人</a></li>
+                    <li><a href="#">负责人</a></li>
+                    <li><a href="#">创建者</a></li>
+                  </ul>
+                </div>
+                </td>
+                <td>
+                  <button type="button" class="btn btn-info-tp" data-dismiss="modal">移除</button>
+                </td>
+                </tr>
+                <% end %>
+                </tbody>
+                </table>
+            </div>
+
+            <div role="tabpanel" class="tab-pane" id="profile1">
+
+                <%= simple_form_for(@project, url: is_edit_or_update? ? training_platform_project_path(@project) : training_platform_projects_path(@project), remote: true, format: :js, wrapper: :horizontal_form_col210 ,html: {id: "projectFormModal", class: "form-horizontal"}) do |f| %>
+
+                <%= f.input :name, as: :string, required: false, autofocus: true %>
+                <%= f.input :description, as: :text, required: false, input_html: {cols: 6} %>
+                
+
+                <div class="row  ace_tp_m">
+                <div class="col-sm-6">
+                <button type="button" class="btn btn-danger-tp" data-dismiss="modal">编辑</button>
+                <div class="col-sm-6">
+                <button type="button" class="btn btn-danger-tp" data-dismiss="modal">取消</button>
+                </div>
+                </div>
+                <% end %>
+
+            </div>
+        </div>
+</div> 
