--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -38,7 +38,7 @@
 			<div class="line"></div>
 		</div>
 		<div id="courseList">
-		  <%= render @courses %>
+		  <%= render partial: "course", locals: {category: '在线课程'} %>
 		</div>
 	</div>
 </div>
