--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,19 +1,21 @@
-<div class="col-sm-4">
-	<div class="bordered">
-	  <%= link_to course_path(course.id) do %>
-			<%= image_tag(course.image.avatar.url(:c_360_200), class: "img-responsive")%>
-			<%= image_tag(course.try(:teacher).try(:image).avatar.url(:t_98), class: "img-responsive avatar") if course.teacher %>
-			<span class="pull-right name"><%= course.try(:teacher).try(:name) %></span>
-			<div class="col-sm-12 mt-40">
-				<p class="text-muted"><%= course.try(:teacher).try(:description) %></p>
-				<p class="text-muted"><%= course.title %></p>
-			</div>
-			<div class="col-sm-12 infos">
-				<span class="glyphicon glyphicon-eye-open"></span> <%= course.view_count %>
-				&nbsp;&nbsp;&nbsp;
-				<span class="glyphicon glyphicon-time"></span><%= format_time(course.last_update_time) %>
-				<b class="pull-right">免费</b>
-			</div>
-		<% end %>
+<% @courses.each do |course|%>
+	<div class="col-sm-4">
+		<div class="bordered">
+		  <%= link_to course_path(course.id, category: category) do %>
+				<%= image_tag(course.image.avatar.url(:c_360_200), class: "img-responsive")%>
+				<%= image_tag(course.try(:teacher).try(:image).avatar.url(:t_98), class: "img-responsive avatar") if course.teacher %>
+				<span class="pull-right name"><%= course.try(:teacher).try(:name) %></span>
+				<div class="col-sm-12 mt-40">
+					<p class="text-muted"><%= course.try(:teacher).try(:description) %></p>
+					<p class="text-muted"><%= course.title %></p>
+				</div>
+				<div class="col-sm-12 infos">
+					<span class="glyphicon glyphicon-eye-open"></span> <%= course.view_count %>
+					&nbsp;&nbsp;&nbsp;
+					<span class="glyphicon glyphicon-time"></span><%= format_time(course.last_update_time) %>
+					<b class="pull-right">免费</b>
+				</div>
+			<% end %>
+		</div>
 	</div>
-</div>
+<% end %>
