--- a/app/views/courses/_courses_intro.html.erb
+++ b/app/views/courses/_courses_intro.html.erb
@@ -1,8 +1,8 @@
 <div class="sub_head">
   <ol class="breadcrumb">
   	<li><span class="glyphicon glyphicon-home">&nbsp;</span>课程中心</li>
-  	<li><%= link_to params[:category], "javascript:void(0)" %></li>
-  	<li><%= link_to course.title, course_path(course.id) %></li>
+  	<li><%= params[:category] %></li>
+  	<li class="active"><%= course.title %></li>
   </ol>
 </div>
 <div class="wrapper online">
