finish announces#show

--- a/app/views/training_platform/announces/create.js.erb
+++ b/app/views/training_platform/announces/create.js.erb
@@ -1,2 +1,3 @@
 $("#anno-index").replaceWith("<%= escape_javascript(render partial: 'announces', location: {announces: @announces}) %>");
 $("#trainingPlatformModal").modal('hide');
+alert("公告创建成功");
