--- a/app/views/training_platform/announces/_announces.html.erb
+++ b/app/views/training_platform/announces/_announces.html.erb
@@ -1,10 +1,10 @@
 <% @announces.each do |announce| %>
-<ul class="nav nav-pills nav-stacked anno-ul">
-	<li>
-		<a class="clearfix" href="#">
-			<span class="col-xs-9 text-left"><%= announce.description %></span>
-			<span class="col-xs-3 text-right"><%= announce.created_at.strftime("%Y-%m-%d") %></span>
-		</a>
-	</li>
-</ul>
+	<ul class="nav nav-pills nav-stacked anno-ul">
+		<li>
+			<%= link_to(training_platform_project_announce_path(project_id: params[:project_id], id: announce), remote: true, format: :js, class: "clearfix") do %>
+				<span class="col-xs-9 text-left"><%= announce.description %></span>
+				<span class="col-xs-3 text-right"><%= announce.created_at.strftime("%Y-%m-%d") %></span>
+			<% end %>
+		</li>
+	</ul>
 <% end %>
