--- a/app/views/training_platform/announces/_form.html.erb
+++ b/app/views/training_platform/announces/_form.html.erb
@@ -1,6 +1,16 @@
 <h3 class="text-center title"><span>创建公告<span></h3>
 <%= simple_form_for(@announce, url: training_platform_project_announces_path(project_id: params[:project_id], id: @announce), remote: true, format: :js, wrapper: :horizontal_form_col210 ,html: {id: "projectFormModal", class: "form-horizontal"}) do |f| %>
 
+	<% if @announce.errors.any? %>
+		<div id="error_explanation">
+			<ul>
+				<% @announce.errors.full_messages.each do |msg| %>
+					<li><%= msg %></li>
+				<% end %>
+			</ul>
+		</div>
+	<% end %>
+
 	<%= f.input :title, as: :string, required: false, autofocus: true %>
 	<%= f.input :description, as: :text, required: false, input_html: {cols: 4, rows: 4} %>
 	
