--- a/app/views/training_platform/announces/index.html.erb
+++ b/app/views/training_platform/announces/index.html.erb
@@ -46,6 +46,7 @@
 								<h3>公告信息</h3>
 								<hr class="my-line">
 							</div>
+							<!-- 公告列表 -->
 							<div id="anno-index">
 								<%= render partial: "announces", location: {announces: @announces} %>
 							</div>
@@ -56,17 +57,9 @@
 								<h3>公告详情</h3>
 								<hr class="my-line">
 							</div>
-							<ul class="nav nav-pills nav-stacked anno-ul">
-								<li >
-									<span class="col-xs-9 text-left">这是公告这是公告这是公告这是公告这是公告</span>
-									<span class="col-xs-3 text-right">2014-07-07</span>
-								</li>
-							</ul>
-							<div class="col-xs-12">
-								<br>
-								<div class="announce-content">
-									<p>这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告这是公告</p>
-								</div>
+							<!-- 显示公告信息 -->
+							<div id="anno-show">
+								<%= render partial: 'show_announce', location: {announce: @announce} %>
 							</div>
 						</div>
 						<!-- PAGE CONTENT ENDS -->
